--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 	<div class="container">
-	
 	<div class="menu">
 		<ul>
 			<li><a href="#">Home</a></li>
@@ -34,7 +33,7 @@
 				
 			</div>
 			<div class="three2">
-				<img src="images/BaMu.jpg" alt="Bamu" height="150px" width="100%">
+				<img src="images/BaMu.jpg" alt="BaMu" height="150px" width="100%">
 			</div>
 			<div class="three3">
 				<img src="images/PSG.jpg" alt="PSG" height="150px" width="100%">
